# daily-snippets

./: .clang-format  .editorconfig  .gitignore  2017040401.cpp  2017040501.cpp  2017040601.cpp  2017041601.cpp  2017041901.cpp  2017050402.cpp  2017050502.cpp  2017050603.cpp  2017050604.cpp  2017050605.cpp  2017050606.cpp  2017050801.cpp  2017050802.cpp  2017051602.cpp  2017051701.cpp  2017052201.cpp  2017052302_either.cpp  2017052403_wave.cpp  2017060601_noise.js  2017060701_noise.js  2017061101_crtp.cpp  2017061201_observable.cpp  2017061701.rs  2017061901_vec.cpp  2017062901.go  2017070401_assets.cpp  2017070501_assets.cpp  2017071401.cpp  2017072401.cpp  2017090701_puts.c  2017091401.glsl  2017091501.go  2017091601.glsl  2017091801.glsl  2017091802.glsl  2017091803.glsl  2017092601.cpp  (+119 more)
2017/: 2017032901.cpp  2017050401.cpp  2017050501.cpp  2017050601.cpp  2017050602.cpp  2017050701.cpp  2017050702.cpp  2017050901.cpp  2017051001.cpp  2017051601.cpp  2017051701.cpp  2017051702.cpp  2017052102.cpp  2017052402_logexp.js  2017052801_defer.cpp  2017060101_rect.cpp  2017061001_utf_conversion.cpp  2017061301_eventemitter.cpp  2017061501.md  2017061801.cpp  2017061902_array_copying.cpp  2017062001_vec.cpp  2017063001.go  2017070101_vec.cpp  2017070401_riff.cpp  2017070701_mat.cpp  2017071301.lisp  2017071501_stream.cpp  2017071601_getset.cpp  2017071901_binary.cpp  2017072001_shortestlambda.cpp  2017080101.js  20170912.cpp  2017091701.glsl  20170925.html  2017093002.glsl  2017100501.glsl  2017102801.cpp  2017102901.cpp  2017103101.cpp  (+20 more)
2017/2017052601_vulkan/: CMakeLists.txt
2017/2017052901_vulkan/: CMakeLists.txt
2017/2017053101_vulkan/: CMakeLists.txt  main.cpp
2017/2017060201_window_class/: CMakeLists.txt  application.cpp  window.cpp  window.hpp
2017/2017060501_application/: CMakeLists.txt  application.cpp
2017/2017071101_vulkan/: CMakeLists.txt  VulkanHelper.hpp  main.cpp
2017/2017092101_clang/: CMakeLists.txt
2017051002/: CMakeLists.txt  main.cpp
2017051101/: main.cpp
2017051201/: CMakeLists.txt  main.cpp
2017051301/: main.cpp
2017051501/: main.cpp
2017051502/: CMakeLists.txt  main.cpp
2017051503/: CMakeLists.txt  main.cpp
2017051801/: CMakeLists.txt  main.cpp
2017051901/: CMakeLists.txt  main.cpp
2017052101/: CMakeLists.txt  main.cpp
2017052301/: main.cpp
2017052401_xaudio/: CMakeLists.txt  main.cpp
2017052404_xaudio/: CMakeLists.txt
2017052501_xaudio/: main.cpp
2017052601_vulkan/: main.cpp
2017052701_vulkan/: CMakeLists.txt  main.cpp
2017052802_vulkan/: CMakeLists.txt  main.cpp
2017053001_vulkan/: CMakeLists.txt
2017060201_window_class/: application.hpp  main.cpp
2017060301_window_class/: application.hpp  window.cpp  window.hpp
2017060401_application/: CMakeLists.txt  application.cpp
2017060501_application/: main.cpp
2017061401_redraw_window/: main.cpp
2017061601_ctest/: CMakeLists.txt
2017062101_vulkan/: CMakeLists.txt  main.cpp
2017062201_vulkan/: main.cpp
2017062301_vulkan/: main.cpp
2017062501_vulkan/: main.cpp
2017062701_vulkan/: WindowsHelper.hpp
2017062801_vulkan/: WindowsHelper.hpp
2017070301_vulkan_shaders/: shader.vert
2017070601_vulkan/: CMakeLists.txt  VulkanHelper.hpp  main.cpp
2017070901_vulkan/: WindowsHelper.hpp
2017071201_vulkan/: main.cpp
2017090801_cmake_clang_tidy/: CMakeLists.txt
2017091301_docker/: Dockerfile
2017092201_clang_on_windows/: CMakeLists.txt
2017092401/: main.go
2017102101/: main.c
2017110201_clang_format/: main.cpp
2017110801_canvas/: index.html
2017112001_wasapi/: CMakeLists.txt
2017120801_hexblur/: main.js
2017120901_hexblur/: sketch_171209a.pde
2017121901/: Dockerfile
2018/: 2018111301.swift  2018010901.cs  2018011401_lexer.js  2018011501_lexer.js  2018022001-DispatchSourceFileSystemObject.swift  2018031501-merge.js  2018041001.js  2018041101.js  2018041402.cpp  2018041403.cpp  2018041501.cpp  2018041502_mat.cpp  2018041503_mat.cpp  2018041601.cpp  2018041701_mat.cpp  2018041801_linmath.cpp  2018042301_linmath.cpp  2018042501_linmath.cpp  2018042601_linmath.cpp  2018042701_linmath.cpp  2018050201_linmath.cpp  2018050301.cpp  2018050603.cpp  2018050702.cpp  2018050703.cpp  2018050801.cpp  2018051001_endianess.cpp  2018051101_endianess.cpp  2018051102_visitor.cpp  2018051201_visitor.cpp  2018051202_linmath.cpp  2018051203_debug_compilers.cpp  2018051401_hwnd.cpp  2018051701.cpp  2018052001.cpp  2018052002_linmath.cpp  2018052301_linmath.cpp  2018052601_linmath.cpp  2018052801_linmath.cpp  2018052901_linmath.cpp  (+33 more)
2018012201-grid-layout/: index.html
2018012401-grid-layout/: style.css
2018012501-canvas/: index.html  main.js
2018012701-canvas/: index.html  main.js
2018012801-canvas/: createAnimationLoop.js  index.html
2018012901-canvas/: createParticleSystem.js  main.js
2018013001-canvas/: createParticleSystem.js  index.html
2018013101-clip/: index.html  style.css
2018020101-skew-css/: index.html  style.css
2018020401-delta/: main.cpp
2018020501-worker/: main.cpp
2018020601-worker/: main.cpp
2018020603-thread/: main.cpp
2018020701-thread/: main.cpp
2018020801-thread/: main.cpp
2018031101-webgl/: main.js
2018031201-webgl/: main.js  shaders.js
2018031601-webgl/: main.js
2018031701-webgl/: package.json
2018031801-webgl/: main.js  shaders.js
2018031901-webgl/: main.js
2018032101-webgl/: main.js
2018032301-webgl/: main.js
2018032401-webgl/: main.js
2018040501-webgl/: main.js  shaders.js
2018040601-webgl/: mat4.js
2018051801-webgl/: main.js  mat4.js
2018052003-webgl/: createAnimationLoop.js  shaders.js
2018061201/: main.cpp
2018061301/: main.cpp
2018061701/: main.cpp
2018070901-xaudio/: main.cpp
2018082901/: main.go  main_test.go
2018090401/: iface_test.go
2018090501/: iface_test.go
2018090801/: camera.go  main.go  scene.go  shape.go
2018090901/: material.go
2018091201/: camera.go  shape.go
2018092101/: main.go
2018111101/: math.go
2019021701-axios-progress/: index.ts
2019051201-canvas-js-app/: index.html
2019051601-webgl/: index.html
2019091601/: index.html
(+117 files in other folders)
